# LnkStain_Engine

./: CMakeLists.txt
Core/: CMakeLists.txt
Core/Private/: LSApplication.cpp
Core/Private/ECS/: LSEntity.cpp  LSNode.cpp  LSScene.cpp  LSUUID.cpp
Core/Private/ECS/Component/: LSCameraComponent.cpp
Core/Private/ECS/System/: LSBaseMaterialSystem.cpp  LSMaterialSystem.cpp  LSParticleSystem.cpp  LSUnlitMaterialSystem.cpp
Core/Private/Render/: LSMaterial.cpp  LSMesh.cpp  LSRenderContext.cpp  LSRenderTarget.cpp  LSRenderer.cpp  LSSampler.cpp  LSTexture.cpp
Core/Public/: LSApplication.h  LSApplicationContext.h  LSEntryPoint.h
Core/Public/ECS/: LSComponent.h  LSEntity.h  LSNode.h  LSScene.h  LSSystem.h  LSUUID.h
Core/Public/ECS/Component/: LSCameraComponent.h  LSTransformComponent.h
Core/Public/ECS/Component/Material/: LSBaseMaterialComponent.h  LSMaterialComponent.h  LSUnlitMaterialComponent.h
Core/Public/ECS/System/: LSBaseMaterialSystem.h  LSMaterialSystem.h  LSParticleSystem.h  LSUnlitMaterialSystem.h
Core/Public/Render/: LSMaterial.h  LSMesh.h  LSRenderContext.h  LSRenderTarget.h  LSRenderer.h  LSSampler.h  LSTexture.h
Platform/: CMakeLists.txt
Platform/Private/: FPSUtil.cpp  LSGeometryUtil.cpp  LSLog.cpp  LSWindow.cpp
Platform/Private/Event/: LSEventDispatcher.cpp
Platform/Private/Graphic/: LSGraphicContext.cpp  LSVKBuffer.cpp  LSVKCommandBuffer.cpp  LSVKDescriptorSet.cpp  LSVKDevice.cpp  LSVKFramebuffer.cpp  LSVKGraphicContext.cpp  LSVKImage.cpp  LSVKImageView.cpp  LSVKPipeline.cpp  LSVKQueue.cpp  LSVKRenderPass.cpp  LSVKSwapchain.cpp
Platform/Private/Window/: LSGLFWwindow.cpp
Platform/Public/: FPSUtil.h  LSEngine.h  LSFileUtil.h  LSGeometryUtil.h  LSLog.h  LSWindow.h
Platform/Public/Event/: LSEvent.h  LSEventDispatcher.h  LSEventObserver.h  LSKeyEvent.h  LSMouseEvent.h  LSWindowEvent.h
Platform/Public/Graphic/: LSGraphicContext.h  LSVKBuffer.h  LSVKCommandBuffer.h  LSVKCommon.h  LSVKDescriptorSet.h  LSVKDevice.h  LSVKFramebuffer.h  LSVKGraphicContext.h  LSVKImage.h  LSVKImageView.h  LSVKPipeline.h  LSVKQueue.h  LSVKRenderPass.h  LSVKSwapchain.h
Platform/Public/Window/: LSGLFWwindow.h
Resource/Shader/: 01_hello_buffer.frag  01_hello_buffer.vert  01_hello_buffer.vert.spv  02_descriptor_set.frag  02_descriptor_set.frag.spv  02_descriptor_set.vert  02_descriptor_set.vert.spv  03_unlit_material.frag  03_unlit_material.vert
Sample/: CMakeLists.txt
Sample/01_FirstCube/: CMakeLists.txt  Main.cpp
Sample/02_Texture/: CMakeLists.txt  Main.cpp
Sample/03_ECS_Enity/: CMakeLists.txt  Main.cpp
Sample/SandBox/: CMakeLists.txt  LSEventTesting.cpp  LSEventTesting.h  Main.cpp
cmake/: SPIR_V.cmake
